k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jordbot-dev
  labels:
    app.kubernetes.io/part-of: jordbot
    environment: dev
