k8s/dev/40-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jordannedyck-ai
  namespace: jordbot-dev
  labels:
    app: jordannedyck-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jordannedyck-ai
  template:
    metadata:
      labels:
        app: jordannedyck-ai
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: jordannedyck-ai
        image: REGISTRY_PLACEHOLDER/jordbot:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: faiss-db
          mountPath: /opt/app-root/src/faiss_db
      volumes:
      - name: faiss-db
        persistentVolumeClaim:
          claimName: faiss-db
