k8s/dev/50-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jordbot-dev
  namespace: jordbot-dev
spec:
  to:
    kind: Service
    name: jordannedyck-ai-web
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
